feat: deliver play configs to bound devices
